

o   Andrew Esh <Andrew_Esh@adaptec.com>
    * BUG 1061: Fix nmbd to correctly the path to an lmhosts files 
      specified on the command line with -H.


o   SATOH Fumiyasu <fumiya@samba.gr.jp>
    * End profile fixes.
    * BUG 3348: Don't assume owning sticky bit directory means 
      write access allowed.
    * Fix double free in on failure path in POSIX acl code.


o   Björn Jacke <bj@sernet.de>
    * Configure check for Tru64 EA functions (not yet implemented).
    * Find Tru64 AIO lib in configure.
    * Cut-n-paste fixes in configure.in.


o   Michael James <michael@james.st>
    * sid2string fix in adssearch.pl.


o   William JoJo <jojowil@hvcc.edu>
    * BUG 3340: Prevent automatic inclusion of AIO support on AIX.
    * BUG 3389: Failures on AIX in linking smbd when the symbol 
      table for ld exceeds 65536 bytes.
    * Add -W to smbpassword so that the ldap admin dn password does
      not have to be specified on the command line.
    * BUG 3408: Fix for external password change programs on AIX.
    * BUG 1779: 64-bit compile fixes.


o   Martin Koeppe <mkoeppe@gmx.de>
    * BUG 3287: Match SFU behavior for dev/inode numbers.


o   Volker Lendecke <vl@samba.org>
    * BUG 3291: Fix valgrind error in client connection code.
    * BUG 3292: Prevent smbclient from spinning if server terminates
      connection.
    * BUG 3293: Use SMBecho instead of chkpath to keep a smbclient 
      connection alive smbclient.
    * Add lookupname to rpcclient query_user as a fallback, we now 
      accept both rid and username.
    * Introduce yet another copy of the string_sub function: 
      talloc_string_sub use by AFS token code in winbindd.
    * BUG 3351: pdb_mysql again overwrites password fields.
    * BUG 3384: Fix segv in tdbtool.
    * Use the same CFLAGS for generating the pch as we use to 
      actually compile.
    * Correct typo when compiling the vfs_catia module.


o   Derrell Lipman <derrell@samba.org>
    [libsmbclient]